--- a/src/main/resources/com/example/mylittleerp/mainTabbedView.fxml
+++ b/src/main/resources/com/example/mylittleerp/mainTabbedView.fxml
@@ -1,17 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="536.0" prefWidth="744.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mylittleerp.controller.MainController">
    <children>
-      <TabPane prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane prefHeight="536.0" prefWidth="744.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Inventory" />
-          <Tab text="Sales" />
-            <Tab text="Costumers" />
-            <Tab text="Supplier" />
+          <Tab text="Inventory" >
+            <content>
+                <AnchorPane prefHeight="400.0" prefWidth="600.0">
+                    <children>
+                        <Text layoutX="326.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inventory">
+                            <font>
+                                <Font size="18.0" />
+                            </font>
+                        </Text>
+                        <ListView fx:id="ProductListView" editable="true" layoutX="39.0" layoutY="87.0" prefHeight="298.0" prefWidth="573.0" />
+                        <Button layoutX="647.0" layoutY="87.0" mnemonicParsing="false"  onAction="#viewProductAction" prefHeight="298.0" prefWidth="58.0" text="View" />
+                        <Button layoutX="39.0" layoutY="403.0" mnemonicParsing="false"  onAction="#addProductAction" prefHeight="40.0" prefWidth="93.0" text="Add" />
+                        <Button layoutX="280.0" layoutY="403.0" mnemonicParsing="false" onAction="#deleteProductAction" prefHeight="40.0" prefWidth="93.0" text="Delete" />
+                        <Button layoutX="519.0" layoutY="403.0" mnemonicParsing="false" onAction="#editProductAction" prefHeight="40.0" prefWidth="93.0" text="Edit" />
+                    </children>
+                </AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="Sales">
+               <content>
+                  <AnchorPane prefHeight="400.0" prefWidth="600.0">
+                   <children>
+                       <Text layoutX="326.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sales">
+                           <font>
+                               <Font size="18.0" />
+                           </font>
+                       </Text>
+                       <ListView fx:id="SaleListView" editable="true" layoutX="39.0" layoutY="87.0" prefHeight="298.0" prefWidth="573.0" />
+                       <Button layoutX="647.0" layoutY="87.0" mnemonicParsing="false"  onAction="#viewSaleAction" prefHeight="298.0" prefWidth="58.0" text="View" />
+                       <Button layoutX="39.0" layoutY="403.0" mnemonicParsing="false"  onAction="#addSaleAction" prefHeight="40.0" prefWidth="93.0" text="Add" />
+                       <Button layoutX="280.0" layoutY="403.0" mnemonicParsing="false" onAction="#deleteSaleAction" prefHeight="40.0" prefWidth="93.0" text="Delete" />
+                       <Button layoutX="519.0" layoutY="403.0" mnemonicParsing="false" onAction="#editSaleAction" prefHeight="40.0" prefWidth="93.0" text="Edit" />
+                   </children>
+                  </AnchorPane>
+               </content>
+          </Tab>
+
+            <Tab text="Costumers">
+            <content>
+                <AnchorPane prefHeight="400.0" prefWidth="600.0">
+                    <children>
+                        <Text layoutX="326.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Customers">
+                            <font>
+                                <Font size="18.0" />
+                            </font>
+                        </Text>
+                        <ListView fx:id="CustomerListView" editable="true" layoutX="39.0" layoutY="87.0" prefHeight="298.0" prefWidth="573.0" />
+                        <Button layoutX="647.0" layoutY="87.0" mnemonicParsing="false"  onAction="#viewCustomerAction" prefHeight="298.0" prefWidth="58.0" text="View" />
+                        <Button layoutX="39.0" layoutY="403.0" mnemonicParsing="false"  onAction="#addCustomerAction" prefHeight="40.0" prefWidth="93.0" text="Add" />
+                        <Button layoutX="280.0" layoutY="403.0" mnemonicParsing="false" onAction="#deleteCustomerAction" prefHeight="40.0" prefWidth="93.0" text="Delete" />
+                        <Button layoutX="519.0" layoutY="403.0" mnemonicParsing="false" onAction="#editCustomerAction" prefHeight="40.0" prefWidth="93.0" text="Edit" />
+                    </children>
+                </AnchorPane>
+            </content>
+            </Tab>
+          <Tab text="Supplier">
+              <content>
+                  <AnchorPane prefHeight="400.0" prefWidth="600.0">
+                      <children>
+                          <Text layoutX="326.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Suppliers">
+                              <font>
+                                  <Font size="18.0" />
+                              </font>
+                          </Text>
+                          <ListView fx:id="SupplierListView" editable="true" layoutX="39.0" layoutY="87.0" prefHeight="298.0" prefWidth="573.0" />
+                          <Button layoutX="647.0" layoutY="87.0" mnemonicParsing="false"  onAction="#viewSupplierAction" prefHeight="298.0" prefWidth="58.0" text="View" />
+                          <Button layoutX="39.0" layoutY="403.0" mnemonicParsing="false"  onAction="#addSupplierAction" prefHeight="40.0" prefWidth="93.0" text="Add" />
+                          <Button layoutX="280.0" layoutY="403.0" mnemonicParsing="false" onAction="#deleteSupplierAction" prefHeight="40.0" prefWidth="93.0" text="Delete" />
+                          <Button layoutX="519.0" layoutY="403.0" mnemonicParsing="false" onAction="#editSupplierAction" prefHeight="40.0" prefWidth="93.0" text="Edit" />
+                      </children>
+                  </AnchorPane>
+              </content>
+                  </Tab>
         </tabs>
       </TabPane>
    </children>
